introduce custom directive for activity detail display

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -117,6 +117,7 @@
 <script src="/js/ld/HomeService.js"></script>
 <script src="/js/ld/LearningDesignController.js"></script>
 <script src="/js/ld/LearningDesignService.js"></script>
+<script src="/js/ld/LDDirectives.js"></script>
 <script src="/js/ld/ActivityFilter.js"></script>
 <script src="/js/user/UserController.js"></script>
 <script src="/js/user/UserService.js"></script>
