--- a/client/views/index.html
+++ b/client/views/index.html
@@ -79,8 +79,8 @@
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#"><i class="icon-cog"></i> Preferences</a></li>
-                            <li><a href="#"><i class="icon-envelope"></i> Contact Support</a></li>
+                            <li><a href="#"><i class="icon-cog"></i> My Profile</a></li>
+                            <li><a href="#"><i class="icon-pencil"></i> My Designs</a></li>
                             <li class="divider"></li>
                             <li><a id="logoutLink" ng-click="logout()" href=""><i class="icon-off"></i> Logout</a></li>
                         </ul>
@@ -126,6 +126,7 @@
 <script src="/js/lib/jquery.js"></script>
 <script src="/js/lib/bootstrap.js"></script>
 <script src="/js/lib/ui-bootstrap-tpls-0.4.0.min.js"></script>
+
 
 <!-- Util -->
 <script src="/js/lib/ng-infinite-scroll.min.js"></script>
