home qcer style

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1436,9 +1436,22 @@ input[type="checkbox"] {
 
 .qcer {
     float: left;
-    width: 22px;
+    width: 65%;
     height: 22px;
     color: #FFF;
+    font-size: 12px;
+    font-weight: bold;
+
+}
+
+.scope {
+    float: right;
+    width: 35%;
+    height: 22px;
+    text-align: right;
+    color: #FFF;
+    font-size: 12px;
+    font-weight: bold;
 
 }
 
@@ -1801,7 +1814,8 @@ input[type="checkbox"] {
     }
 
     .ld-border {
-        width: 42%;
+        width: 43%;
+        min-width: 40%;
         margin-right: 0;
     }
 
