--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -4,8 +4,8 @@
     <div ng-repeat="learningDesign in learningDesigns | orderBy:'ld_last_edit_date':true" class="ld-border ld-item">
         <div class="ld-top">
             <!-- FIXME: convert static data to dynamic -->
-            <div class="qcer">A2</div>
-            <div class="float-right">
+            <div class="qcer">A1, A2, B1, B2, C1, C2</div>
+            <div class="scope">
                 {{ learningDesign.ld_scope }}
             </div>
         </div>
